--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="images/logo.png" alt="SoyCar Transport Logo">
+            <img src="images/341277203_1413637722782736_3262694318373621872_n.png" alt="SoyCar Transport Logo">
         </div>
         <nav>
             <ul>
